
  - spot::maximum_cardinality_search() and
    spot::maximum_cardinality_search_reorder_here() are new function
    to compute (and apply) an ordering of state based on a maximum
    cardinality search.

  Bug fixes:

  - "ltlsynt --aiger -q ..." was still printing the realizability
    status and the AIG circuit; it now does the job silently as
    requested.

New in spot 2.12.1  (2024-09-23)

  Bug fixes:

  - Generating random formula without any unary opertors would very
    often create formulas much smaller than asked.

  - The parity game solver, which internally works on "parity max
    odd", but actually accept any type of parity acceptance, could be
    confused by games with "parity min" acceptance using transition
    with several colors (a rather uncommon situation).

  - "ltlsynt ... --print-game --dot=ARGS" was ignoring ARGS.

  - Work around various warnings from g++14.

  - Improved handling of spot-extra/ directory with newer Swig
    versions.  Necessary to recompile Seminator 2 with Swig 4.

New in spot 2.12  (2024-05-16)

  Build:

  - When Python bindings are enabled, Spot now requires Python 3.6 or
    later.  Python 3.6 has reached end-of-life in 2021, but is still
    used on CentOS 7 (which will reach end-of-support later in 2024).

  Documentation:

  - https://spot.lre.epita.fr/tut25.html is a new example showing
    how to print an automaton in the "BA format" (used by Rabbit
    and other tools).

  Command-line tools:

  - In places that accept format strings with '%' sequences, like
    options --stats, --name, or --output, the new '%l' can now be used
    to produce the 0-based serial number of the produced object.  This
    differs from the existing '%L' that is usually related to the line
    number of the input (when that makes sense).  For instance to
    split a file that contains many automata into one file per
    automaton, do

        autfilt input.hoa -o output-%l.hoa
