@@ -136,6 +136,9 @@ New in spot 2.12.1.dev  (not yet released)
     status and the AIG circuit; it now does the job silently as
     requested.
 
+  - to_finite() was dealing incorrectly with edges that were
+    both alive and dead.  (Issue #596.)
+
 New in spot 2.12.1  (2024-09-23)
 
   Bug fixes:
